edit product tests